# codegraph

./: .cgignore  .env.example  .gitignore  LICENSE  README.md  codegraph.bat  codegraph.ps1  config.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: demo_neo4j.py  manual_run.py  rebuild_graph.py
site/: 404.html  index.html
site/00-overview/: index.html
site/01-problem-and-motivation/: index.html
site/02-tree-sitter-and-parsing/: index.html
site/03-import-and-call-resolution/: index.html
site/04-neo4j-and-graph-schema/: index.html
site/05-personalized-pagerank/: index.html
site/06-seed-node-selection/: index.html
site/07-post-processing/: index.html
site/08-mcp-server/: index.html
site/09-evaluation/: index.html
site/10-research-papers/: index.html
site/11-glossary/: index.html
site/example-of-proper-docs/: index.html
site/example-of-proper-docs/architecture/: index.html
site/example-of-proper-docs/contributing/: index.html
site/example-of-proper-docs/contributing_languages/: index.html
site/example-of-proper-docs/cookbook/: index.html
site/example-of-proper-docs/deployment/: index.html
site/example-of-proper-docs/future_work/: index.html
site/example-of-proper-docs/integration_guide/: index.html
site/example-of-proper-docs/license/: index.html
site/example-of-proper-docs/roadmap/: index.html
site/example-of-proper-docs/setup_workflows/: index.html
site/example-of-proper-docs/troubleshooting/: index.html
site/example-of-proper-docs/use_cases/: index.html
site/example-of-proper-docs/use_cases_detailed/: index.html
site/example-of-proper-docs/user_journeys/: index.html
site/example-of-proper-docs/watching/: index.html
site/plan/: index.html
site/project-documentation/: index.html
site/search/: search_index.json
site/wiki/: index.html
site/wiki/architecture/: index.html
src/codegraph/: __init__.py  __main__.py
src/graph/: __init__.py  connection.py  graph_builder.py  ppr.py  queries.py
src/parser/: __init__.py  extractors.py  node_utils.py  python_parser.py
tests/: conftest.py  test_graph_builder.py  test_graph_connection.py  test_graph_ppr.py  test_graph_queries.py  test_graph_resolution.py  test_parser_flask.py  test_parser_user_auth.py
tests/cli/: test_main.py
tests/mcp/: test_server.py
tests/unit/: test_ignore.py
(+95 files in other folders)
