[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph"
version = "0.1.0"
description = "Graph-based context selection engine for AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "neo4j>=5.0",
    "graphdatascience>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# Don't recurse into fixture repos — they ship their own test suites
# that require dependencies we don't install.
norecursedirs = ["tests/fixtures"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
